fix white background when scrolling on small screens

--- a/ui/bingo.css
+++ b/ui/bingo.css
@@ -9,30 +9,24 @@
     font-weight: bold;
     src: url("./assets/fonts/antenna/FordAntennaWGL-Bold.otf");
 }
+
 html,
 body {
-    margin: 0;
-
-    padding: 0;
-
-    min-width: 100%;
-    width: 100%;
-    max-width: 100%;
-
-    min-height: 100%;
-    height: 100%;
-    max-height: 100%;
+  margin: 0;
 }
 
+
 .body {
-    height: 100%;
     background-color: white;
     color: #545454;
+    min-height: 100vh;
 }
 
 .body-dark {
     background-color: #545454;
     color: #E5E5E5;
+    min-height: 100vh;
+
 }
 
 
@@ -125,7 +119,7 @@ body {
     font-family: "Antenna";
     text-align: center;
     font-size: .8rem;
-    margin: 1rem;
+    margin-top: 1rem;
 }
 
 
